--- a/api-notas/notas/src/main/resources/application.properties
+++ b/api-notas/notas/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=notas
+
+# Puerto de la aplicación
+server.port=8080
+
+# Configuración de la base de datos SQLite
+spring.datasource.url=jdbc:sqlite:file:./data/notas.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
+
+# Configuración de JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
